# dental-aligner-env

./: .gitignore  Dockerfile  README.md  client.py  eval_grpo.py  inference.py  models.py  openenv.yaml  prepare.py  pyproject.toml  requirements.txt  train_grpo.py
artifacts/: eval_results.json  eval_summary.md
docs/: DATASETS.md  DATASET_FINDINGS.md
server/: app.py  clinical_profiles.py  dental_constants.py  dental_environment.py  force_decay.py  grader.py  quaternion_utils.py  synthetic_data.py  visualization.py
specs/: 1_1_grpo_training_pipeline.md  1_2_clinical_profiles.md  1_3_pharmacokinetic_force_decay.md  1_4_readme_consistency_audit.md  1_5_huggingface_deployment.md  SPEC_FORMAT.md
