[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dental-aligner-env"
version = "1.0.0"
description = "OpenEnv RL environment for 24-stage dental aligner trajectory planning in SE(3)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "dental", "orthodontics", "se3"]
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "numpy",
    "scipy",
    "openai",
    "matplotlib",
    "Pillow",
    "requests",
]

[project.scripts]
# Entry point used by openenv serve and `uv run server`
server = "server.app:main"

[tool.hatch.build.targets.wheel]
# Include both the server package and top-level modules
packages = ["server"]
include = ["models.py", "client.py", "__init__.py"]

[tool.uv]
# Prefer binary wheels; skip building from source when possible
compile-bytecode = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # handled by formatter
